# hacs_smartcocoon

./: .actrc  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  ACT_USAGE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  README_DEVELOPMENT.md  conftest.py  hacs.json  mypy.ini  pyproject.toml  requirements.txt  requirements_test.txt  run-act-host.sh  semgrep-results.json  setup.cfg
.devcontainer/: Dockerfile  README.md  configuration.yaml  devcontainer.json  env.example  setup-git.sh
.github/: dependabot.yml  labeler-config.yml
.github/ISSUE_TEMPLATE/: beta-feedback.md
.github/workflows/: constraints.txt  labeler.yml  release-drafter.yml  tests.yaml
custom_components/smartcocoon/: __init__.py  config_flow.py  connection_monitor.py  const.py  error_handler.py  fan.py  icons.json  manifest.json  model.py  services.yaml
custom_components/smartcocoon/translations/: ar.json  bg.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  he.json  hr.json  hu.json  id.json  it.json  ja.json  ko.json  lt.json  lv.json  nb.json  nl.json  pl.json  pt.json  ru.json  sk.json  sl.json  sv.json  th.json  tr.json  uk.json  vi.json  zh.json
scripts/: README.md  run-act-host.sh  run-ci-local.sh  run-ci-summary.sh  update-precommit.sh
tests/: const.py  test_config_flow.py  test_connection_monitor.py  test_const.py  test_fan.py  test_final.py  test_init.py  test_model.py  test_simple.py
