[project]
name        = "hacs_smartcocoon"
version     = "v1.1.0"
license     = {text = "MIT"}
description = "SmartCocoon integration with Home Assistant."
readme      = "README.md"
authors     = [
    {name = "Dave Pearce"}
]
keywords    = ["smartcocoon", "homeassistant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
requires-python = ">=3.12.0"

[tool.pylint.BASIC]
class-const-naming-style = "any"
good-names = [
    "_",
    "ev",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "Run",
    "ip",
]

[tool.pylint.MAIN]
py-version = "3.12"
ignore = [
    "tests",
]

[tool.pylint."MESSAGES CONTROL"]
# wrong-import-order - isort guards this
disable = [
    "format",
    "abstract-method",
    "cyclic-import",
    "duplicate-code",
    "inconsistent-return-statements",
    "locally-disabled",
    "not-context-manager",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-public-methods",
    "too-many-boolean-expressions",
    "wrong-import-order",
    "consider-using-f-string"
]

[tool.pylint.REPORTS]
score = false

[tool.pylint.TYPECHECK]
ignored-classes = [
    "_CountingAttr",  # for attrs
]

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "custom_components.smartcocoon",
    "homeassistant",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = "-qq --timeout=9 --cov-report=html:htmlcov --cov-report=term-missing --cov=custom_components.mywatertoronto --cov-fail-under=100"
console_output_style = "count"
testpaths = [
  "tests",
]
